# hidock-next

./: .gitignore  Makefile  README.md  build-electron.bat  build-electron.sh  run-electron.bat  run-electron.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  release.yml.disabled  windows-portable.yml
apps/electron/: ARCHITECTURE.md  README.md  create-dev-shortcut.ps1  electron-builder.yml  package-lock.json  package.json
apps/electron/electron/main/: index.ts  splash.html
apps/electron/electron/preload/: index.ts
apps/electron/native/transcriber/: Cargo.toml
apps/electron/native/transcriber/src/: main.rs
apps/electron/scripts/: build-transcriber.mjs  require-transcriber.mjs
apps/electron/src/: App.tsx  index.html
apps/electron/src/components/: AudioPlayer.tsx  DeviceFileList.tsx
apps/electron/src/constants/: activity-log.ts
apps/electron/src/hooks/: useAudioPlayback.ts  useDeviceSubscriptions.ts  useDownloadOrchestrator.ts  useOperations.ts  useTranscriptionSync.ts  useUnifiedRecordings.ts
apps/electron/src/lib/: ipc-client.ts
apps/electron/src/pages/: Actionables.tsx  Calendar.tsx  Chat.tsx  Device.tsx  Explore.tsx  Library.tsx  MeetingDetail.tsx  People.tsx  Settings.tsx
apps/electron/src/services/: jensen.ts  recorder-device.ts
apps/electron/src/store/: useAppStore.ts  useLibraryStore.ts
apps/electron/src/types/: index.ts  knowledge.ts  stores.ts  unified-recording.ts
docs/: LOCAL_ONLY.md  WINDOWS_WSL.md
(+87 files in other folders)
