[package]
name = "recorder-transcriber"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
fastembed = { version = "5.16.0", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
flate2 = "1"
polyvoice = { version = "0.6.8", features = ["onnx", "download", "segmentation", "embedder", "clusterer", "resegmentation", "profile-balanced"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
symphonia = { version = "0.5", features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
tar = "0.4"

[target.'cfg(windows)'.dependencies]
transcribe-rs = { version = "=0.3.8", default-features = false, features = ["onnx"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["tls-native-vendored"] }

[target.'cfg(not(windows))'.dependencies]
transcribe-rs = { version = "=0.3.8", features = ["whisper-cpp", "onnx"] }
